--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@mercadopago/sdk-react": "^1.0.2",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.9.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
@@ -51,6 +52,8 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.50.0",
     "@types/qrcode": "^1.5.5",
+    "bcryptjs": "^3.0.2",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
@@ -64,6 +67,7 @@
     "lucide-react": "^0.462.0",
     "mercadopago": "^2.8.0",
     "next": "15.3.3",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.3.0",
     "qrcode": "^1.5.4",
     "react": "^18.2.0",
@@ -79,12 +83,12 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.3",
     "zod": "^3.23.8",
-    "zustand": "^5.0.5",
-    "class-variance-authority": "^0.7.1"
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@tailwindcss/typography": "^0.5.15",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^22.0.0",
     "@types/react": "^18.2.62",
     "@types/react-dom": "^18.2.19",
