--- a/package.json
+++ b/package.json
@@ -15,7 +15,12 @@
     "set-admin": "node scripts/set-admin.js"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.9.0",
+    "@fullcalendar/core": "^6.1.18",
+    "@fullcalendar/daygrid": "^6.1.18",
+    "@fullcalendar/interaction": "^6.1.18",
+    "@fullcalendar/react": "^6.1.18",
+    "@fullcalendar/timegrid": "^6.1.18",
+    "@hookform/resolvers": "^3.10.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.9.0",
     "@radix-ui/react-accordion": "^1.2.0",
