--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.3.0",
     "formik": "^2.4.6",
+    "framer-motion": "^12.23.12",
     "html2canvas": "^1.4.1",
     "input-otp": "^1.2.4",
     "jspdf": "^3.0.1",
