--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.50.0",
+    "@types/nodemailer": "^6.4.17",
     "@types/qrcode": "^1.5.5",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
@@ -74,6 +75,7 @@
     "next": "15.3.3",
     "next-auth": "^4.24.11",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.10.1",
     "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
