--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "react-i18next": "^15.5.2",
     "react-resizable-panels": "^2.1.3",
     "recharts": "^2.12.7",
+    "resend": "^4.8.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
